--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -203,12 +203,12 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="portlet light portlet-fit ">
                     <div class="portlet-title">
                         <div class="caption">
                             <i class=" icon-layers font-green"></i>
-                            <span class="caption-subject font-green bold uppercase">Line Chart 1</span>
+                            <span class="caption-subject font-green bold uppercase">卫星数量</span>
                         </div>
                     </div>
                     <div class="portlet-body">
