--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -199,16 +199,12 @@
                 </div>
                 <!-- END CHART PORTLET-->
             </div>
-
-        </div>
-
-        <div class="row">
             <div class="col-md-6">
                 <div class="portlet light portlet-fit ">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class=" icon-layers font-green"></i>
-                            <span class="caption-subject font-green bold uppercase">卫星数量</span>
+                            <i class=" icon-layers font-dark"></i>
+                            <span class="caption-subject font-dark sbold uppercase">卫星数量</span>
                         </div>
                     </div>
                     <div class="portlet-body">
@@ -216,7 +212,9 @@
                     </div>
                 </div>
             </div>
+
         </div>
+
 
     </div>
 </div>
